--- a/src/scss/Form.scss
+++ b/src/scss/Form.scss
@@ -1,3 +1,26 @@
+@keyframes hop {
+  0% {
+    transform: scale(1.0, 1.0) translate(0, 0);
+  }
+  15% {
+    transform: scale(0.98, 0.9) translate(0, 5px);
+  }
+  30% {
+    transform: scale(1.02, 1.0) translate(0, 8px);
+  }
+  50% {transform: scale(0.98, 1.05) translate(0, -8px);
+  }
+  70% {
+    transform: scale(1.0, 0.9) translate(0, 5px);
+  }
+  100% {
+    transform: scale(1.0, 1.0) translate(0, 0);
+  }
+  0%, 100% {
+    opacity: 1;
+  }
+}
+
 .rand-str-gen {
   h1 {
     font-size: 1.8rem;
@@ -59,7 +82,7 @@
     width: 20rem;
     margin: 1rem auto 0;
     button {
-      width: 7rem;
+      width: 8rem;
       line-height: 2rem;
       border-radius: 2rem;
       font-weight: bold;
@@ -71,6 +94,12 @@
       &:hover {
         transform: translateY(.2rem);
         box-shadow: 0 0 0 #a5a5a5;
+      }
+      &.is-clicked {
+        background-color: #04cb01;
+        color: #fff;
+        animation: hop 1s ease-in-out forwards;
+        cursor: no-drop;
       }
     }
   }
