--- a/src/scss/Form.scss
+++ b/src/scss/Form.scss
@@ -34,6 +34,7 @@
     label {
       display: block;
       margin-top: 1rem;
+      cursor: pointer;
     }
 
     input[name="charLength"] {
@@ -43,6 +44,44 @@
     input[name="numOfStrings"] {
       margin-left: .3rem;
       width: 5rem;
+    }
+  }
+  &__accordion {
+    &-icon {
+      transition: height 0.2s linear, opacity 0.2s ease-in;
+      overflow: hidden;
+      position: relative;
+      &::before,
+      &::after {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 1px;
+        position: absolute;
+        top: 50%;
+        background-color: #000;
+        right: -50px;
+      }
+      &::after {
+        transform: rotate(90deg);
+        transition: transform 0.4s ease;
+      }
+      &.open {
+        &::after {
+          transform: rotate(0);
+        }
+      }
+
+    }
+    &-wrap {
+      transition: height 0.2s linear, opacity 0.2s ease-in;
+      overflow: hidden;
+      &.open {
+        max-height: 100%;
+      }
+    }
+    &-cont {
+      padding: 0 2rem;
     }
   }
 
@@ -64,6 +103,11 @@
       transform: translateY(.2rem);
       box-shadow: 0 0 0 #a5a5a5;
     }
+    &.clicked {
+      background-color: #06ffea;
+        animation: hop 1s ease-in-out forwards;
+        cursor: no-drop;
+    }
   }
 }
 
@@ -82,6 +126,7 @@
     width: 20rem;
     margin: 1rem auto 0;
     button {
+      cursor: pointer;
       width: 8rem;
       line-height: 2rem;
       border-radius: 2rem;
@@ -95,7 +140,7 @@
         transform: translateY(.2rem);
         box-shadow: 0 0 0 #a5a5a5;
       }
-      &.is-clicked {
+      &.clicked {
         background-color: #04cb01;
         color: #fff;
         animation: hop 1s ease-in-out forwards;
