--- a/src/scss/RandomTextGenerator.scss
+++ b/src/scss/RandomTextGenerator.scss
@@ -34,6 +34,7 @@
     &-label {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       margin-top: 1rem;
       cursor: pointer;
       width: 16rem;
