--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,21 +1,3 @@
-#root {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-  &:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-  }
-  &.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
-  }
-}
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -25,16 +7,45 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+#root {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.default {
+  &__logo-wrap {
+    display: flex;
+    justify-content: center;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  &__logo {
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
+    &.react {
+      animation: logo-spin infinite 20s linear;
+    }
+    &:hover {
+      filter: drop-shadow(0 0 2em #646cffaa);
+    }
+    &.react:hover {
+      filter: drop-shadow(0 0 2em #61dafbaa);
+    }
+  }
+  h1 {
+    font-size: 1.6rem;
+    font-family: serif;
+    text-align: center;
+    margin-top: 2rem;
+  }
+  &__card {
+    padding: 2em;
+    text-align: center;
+  }
+  &__read-the-docs {
+    color: #888;
+    width: 90%;
+    max-width: 24rem;
+    margin: 0 auto;
+  }
 }
