Add label nowrap

--- a/src/scss/RandomTextGenerator.scss
+++ b/src/scss/RandomTextGenerator.scss
@@ -41,6 +41,7 @@
       cursor: pointer;
       width: 90%;
       max-width: 260px;
+      white-space: nowrap;
       &-number {
         justify-content: start;
       }
